--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,8 @@
           <span id="success-message" class="success-message" hidden="true">Success!</span>
           <span id="taken-error-message" class="error-message" hidden="true">Error: Email Already Taken</span>
           <span id="empty-error-message" class="error-message" hidden="true">Error: Email Address Empty.</span>
+          <span id="invalid-error-message" class="error-message" hidden="true">Error: Invalid Email Address.</span>
+
           <input id="email" type="email" placeholder="Enter your email" />
           <button>Submit</button>
         </form>
